# ametist

./: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: config.rs  mod.rs  vault.rs
src/components/Backlinks/: Backlinks.module.css  Backlinks.tsx
src/components/Editor/: Editor.module.css  Editor.tsx  EditorContextMenu.module.css  EditorContextMenu.tsx  Preview.module.css  Preview.tsx  Toolbar.module.css  Toolbar.tsx  extensions.ts  format.ts  wikilinks.ts
src/components/Settings/: Settings.module.css  Settings.tsx  ThemeEditor.tsx
src/components/Sidebar/: FileItem.tsx  FileTree.tsx  Sidebar.module.css  Sidebar.tsx
src/components/TabBar/: TabBar.module.css  TabBar.tsx
src/components/TitleBar/: TitleBar.module.css  TitleBar.tsx
src/hooks/: useConfig.ts  useVault.ts
src/store/: appStore.ts
src/styles/: global.css
src/themes/: dark.css  light.css
